Handle empty values in Solr
When array is empty in Solr the value is missing
in the result.

--- a/server/http/suggestion-detail/suggestion-detail-cs.html
+++ b/server/http/suggestion-detail/suggestion-detail-cs.html
@@ -42,7 +42,7 @@
       </div>
       <div class="col-12 col-sm-6 col-md-3">
         <dl>
-          <dt>Povinným subjektem dle 106</dt>
+          <dt>Povinným subjektem dle zákona 106</dt>
           <dd>{{#if mandatory_106}}Ano{{else}}Ne{{/if}}</dd>
         </dl>
       </div>
@@ -54,7 +54,7 @@
       </div>
       <div class="col-12 col-sm-6 col-md-3">
         <dl>
-          <dt>Existuje překážka dle 106</dt>
+          <dt>Existuje překážka dle zákona 106</dt>
           <dd>{{#if obstacle_106}}Ano{{else}}Ne{{/if}}</dd>
         </dl>
       </div>
