--- a/server/http/suggestion-detail/suggestion-detail-en.html
+++ b/server/http/suggestion-detail/suggestion-detail-en.html
@@ -42,20 +42,20 @@
       </div>
       <div class="col-12 col-sm-6 col-md-3">
         <dl>
-          <dt>Povinným subjektem dle 106</dt>
-          <dd>{{#if mandatory_106}}Ano{{else}}Ne{{/if}}</dd>
+          <dt>Obliged entity according to law number 106/1999</dt>
+          <dd>{{#if mandatory_106}}Yes{{else}}No{{/if}}</dd>
         </dl>
       </div>
       <div class="col-12 col-sm-6 col-md-3">
         <dl>
-          <dt>Existuje překážka dle zvláštního předpisu</dt>
-          <dd>{{#if obstacle_special_regulation}}Ano{{else}}Ne{{/if}}</dd>
+          <dt>According to special regulation an impediment exists</dt>
+          <dd>{{#if obstacle_special_regulation}}Yes{{else}}No{{/if}}</dd>
         </dl>
       </div>
       <div class="col-12 col-sm-6 col-md-3">
         <dl>
-          <dt>Existuje překážka dle 106</dt>
-          <dd>{{#if obstacle_106}}Ano{{else}}Ne{{/if}}</dd>
+          <dt>According to law number 106/1999 an impediment exists</dt>
+          <dd>{{#if obstacle_106}}Yes{{else}}No{{/if}}</dd>
         </dl>
       </div>
     </div>
