--- a/server/http/suggestion-detail/suggestion-detail-en.html
+++ b/server/http/suggestion-detail/suggestion-detail-en.html
@@ -8,8 +8,8 @@
 
 <body>
   {{#with navigation}} {{> navigation }} {{/with}}
-  {{#with suggestion}}
   <div class="container">
+    {{#with suggestion}}
     <div>
       <h1>{{title}}</h1>
       <h2 class="inline">
@@ -78,9 +78,35 @@
           <dd>{{modified}}</dd>
         </dl>
       </div>
+      <div class="col-12 col-sm-6 col-md-3">
+        <dl>
+          <dt>State</dt>
+          <dd>{{state.label}}</dd>
+        </dl>
+      </div>
     </div>
+    {{/with}}
+    <br/>
+    {{#with datasets}}
+    {{#if visible}}
+    <h2>Datasets</h2>
+    <br/>
+    <div>
+      {{#each items}}
+      <div class="dataset">
+        <a href="{{href}}" rel="nofollow noopener noreferrer">
+          <h4>{{title}}</h4>
+        </a>
+        <p>
+          {{description}}
+        </p>
+      </div>
+      {{/each}}
+    </div>
+    {{/if}}
+    {{/with}}
   </div>
-  {{/with}}
+  
   {{#with footer}} {{> footer }} {{/with}}
 </body>
 
