--- a/server/http/application-detail/application-detail-en.html
+++ b/server/http/application-detail/application-detail-en.html
@@ -118,7 +118,7 @@
     <br/>
     {{#with datasets}}
     {{#if visible}}
-    <h2>Využívané datové sady</h2>      
+    <h2>Used datasets</h2>      
     <br/>
     <div>      
       {{#each items}}
