Rename publication plan
Signed-off-by: Jakub Klímek <jakub@jakubklimek.com>

--- a/server/http/suggestion-detail/suggestion-detail-cs.html
+++ b/server/http/suggestion-detail/suggestion-detail-cs.html
@@ -54,7 +54,7 @@
       </div>
       <div class="col-12 col-sm-6 col-md-3">
         <dl>
-          <dt>Publikační plán</dt>
+          <dt>Plán zveřejnění</dt>
           <dd>{{publication_plan}}</dd>
         </dl>
       </div>
