Hide publication plan when empty

--- a/server/http/suggestion-detail/suggestion-detail-cs.html
+++ b/server/http/suggestion-detail/suggestion-detail-cs.html
@@ -52,12 +52,14 @@
           <dd>{{state.label}}</dd>
         </dl>
       </div>
+      {{#if publication_plan_visible}}
       <div class="col-12 col-sm-6 col-md-3">
         <dl>
           <dt>Plán zveřejnění</dt>
           <dd>{{publication_plan}}</dd>
         </dl>
       </div>
+      {{/if}}
     </div>
     <div class="row">
       <div class="col-12 col-sm-6 col-md-3">
