--- a/server/http/application-detail/application-detail-en.html
+++ b/server/http/application-detail/application-detail-en.html
@@ -4,137 +4,15 @@
   {{> head }}
   <!-- Site specific. -->
   <title>Application - Národní katalog otevřených dat (NKOD)</title>
+  <meta name="description" content="Portál otevřených dat a Národní katalog otevřených dat České republiky"/>
+  <!--  -->
 </head>
 
 <body>
   {{#with navigation}} {{> navigation }} {{/with}}
-
-  <div class="container">
-    {{#with application}}
-    <div>
-      {{#if author.titleVisible}}
-      <h1>{{title}}</h1>
-      <h2 class="inline">
-        {{author.title}}
-      </h2>
-      {{else}}
-      <h1 class="inline">{{title}}</h1>
-      {{/if}}
-      {{#if author.iriVisible}}
-      <a href="{{author.iri}}" title="Go to link" rel="nofollow noopener noreferrer" target="_blank">
-        <i class="bi bi-arrow-up-right-square"></i>
-      </a>
-      {{/if}}
-    </div>
-    <br/>
-    <p>
-      {{breaklines description}}
-    </p>
-    <div class="row">
-      <div class="col-12 col-sm-6 col-md-3">
-        <dl>
-          <dt>State</dt>
-          {{#each states}}
-          <dd>
-            <a href="{{href}}">
-              {{label}}
-            </a>
-            &nbsp;
-            <a href="{{iri}}" title="Go to link" rel="nofollow noopener noreferrer" target="_blank">
-              <i class="bi bi-arrow-up-right-square"></i>
-            </a>
-          </dd>
-          {{/each}}
-        </dl>
-      </div>
-      <div class="col-12 col-sm-6 col-md-3">
-        <dl>
-          <dt>Theme</dt>
-          {{#each themes}}
-          <dd>
-            <a href="{{href}}">
-              {{label}}
-            </a>
-            <a href="{{iri}}" title="Go to link" rel="nofollow noopener noreferrer" target="_blank">
-              <i class="bi bi-arrow-up-right-square"></i>
-            </a>
-          </dd>
-          {{/each}}
-        </dl>
-      </div>
-      <div class="col-12 col-sm-6 col-md-3">
-        <dl>
-          <dt>Platform</dt>
-          {{#each platform}}
-          <dd>
-            <a href="{{href}}">
-              {{label}}
-            </a>
-            <a href="{{iri}}" title="Go to link" rel="nofollow noopener noreferrer" target="_blank">
-              <i class="bi bi-arrow-up-right-square"></i>
-            </a>
-          </dd>
-          {{/each}}
-        </dl>
-      </div>
-      <div class="col-12 col-sm-6 col-md-3">
-        <dl>
-          <dt>Type</dt>
-          {{#each types}}
-          <dd>
-            <a href="{{href}}">
-              {{label}}
-            </a>
-            <a href="{{iri}}" title="Go to link" rel="nofollow noopener noreferrer" target="_blank">
-              <i class="bi bi-arrow-up-right-square"></i>
-            </a>
-          </dd>
-          {{/each}}
-        </dl>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-12 col-sm-6 col-md-3">
-        <dl>
-          <dt>Publication date</dt>
-          <dd>{{published}}</dd>
-        </dl>
-      </div>
-      <div class="col-12 col-sm-6 col-md-3">
-        <dl>
-          <dt>Date last modified</dt>
-          <dd>{{modified}}</dd>
-        </dl>
-      </div>
-    </div>
-    <div class="d-grid gap-2">
-      <a class="btn btn-outline-success  btn-lg" href="{{link}}" rel="nofollow noopener noreferrer">
-        Navigate to application
-      </a>
-    </div>
-    <br/>
-    {{/with}}
-
-    <br/>
-    {{#with datasets}}
-    {{#if visible}}
-    <h2>Used datasets</h2>      
-    <br/>
-    <div>      
-      {{#each items}}
-      <div class="dataset">
-        <a href="{{href}}" rel="nofollow noopener noreferrer">
-          <h4>{{title}}</h4>
-        </a>
-        <p>
-          {{description}}
-        </p>
-      </div>
-      {{/each}}
-    </div>
-    {{/if}}
-    {{/with}}
-
+  <gov-container>
+    <!-- TODO -->
+  </gov-container>
   {{#with footer}} {{> footer }} {{/with}}
 </body>
 
