Migrate suggestion detail to DS

--- a/server/http/suggestion-detail/suggestion-detail-cs.html
+++ b/server/http/suggestion-detail/suggestion-detail-cs.html
@@ -1,4 +1,5 @@
-<html lang="cs">
+<!DOCTYPE html>
+<html dir="ltr" lang="cs">
 
 <head>
   {{> head }}
@@ -8,7 +9,7 @@
 
 <body>
   {{#with navigation}} {{> navigation }} {{/with}}
-  <div class="container">
+  <gov-container>
     {{#with suggestion}}
     <div>
       <h1>{{title}}</h1>
@@ -16,15 +17,15 @@
         {{publisher.title}}
       </h2>
       <a href="{{publisher.iri}}" title="Přejít na odkaz" rel="nofollow noopener noreferrer" target="_blank">
-        <i class="bi bi-arrow-up-right-square"></i>
+        <gov-icon name="box-arrow-up-right"></gov-icon>
       </a>
     </div>
-    <br/>
+    <br />
     <p>
       {{breaklines description}}
     </p>
-    <div class="row">
-      <div class="col-12 col-sm-6 col-md-3">
+    <gov-grid>
+      <gov-grid-item size-sm="6/12" size-md="3/12">
         <dl>
           <dt>Téma</dt>
           {{#each themes}}
@@ -34,75 +35,56 @@
             </a>
             &nbsp;
             <a href="{{iri}}" title="Přejít na odkaz" rel="nofollow noopener noreferrer" target="_blank">
-              <i class="bi bi-arrow-up-right-square"></i>
+              <gov-icon name="box-arrow-up-right"></gov-icon>
             </a>
           </dd>
           {{/each}}
         </dl>
-      </div>
-      <div class="col-12 col-sm-6 col-md-3">
+      </gov-grid-item>
+      <gov-grid-item size-sm="6/12" size-md="3/12">
         <dl>
           <dt>Vytvořeno</dt>
           <dd>{{created}}</dd>
         </dl>
-      </div>
-      <div class="col-12 col-sm-6 col-md-3">
+      </gov-grid-item>
+      <gov-grid-item size-sm="6/12" size-md="3/12">
         <dl>
           <dt>Stav</dt>
           <dd>{{state.label}}</dd>
         </dl>
-      </div>
+      </gov-grid-item>
       {{#if publication_plan_visible}}
-      <div class="col-12 col-sm-6 col-md-3">
+      <gov-grid-item size-sm="6/12" size-md="3/12">
         <dl>
           <dt>Plán zveřejnění</dt>
           <dd>{{publication_plan}}</dd>
         </dl>
-      </div>
+      </gov-grid-item>
       {{/if}}
-    </div>
-    <div class="row">
-      <div class="col-12 col-sm-6 col-md-3">
+    </gov-grid>
+    <gov-grid>
+      <gov-grid-item size-sm="6/12" size-md="3/12">
         <dl>
           <dt>Povinným subjektem dle z. 106/1999 Sb.</dt>
           <dd>{{#if mandatory_106}}Ano{{else}}Ne{{/if}}</dd>
         </dl>
-      </div>
-      <div class="col-12 col-sm-6 col-md-3">
+      </gov-grid-item>
+      <gov-grid-item size-sm="6/12" size-md="3/12">
         <dl>
           <dt>Existuje překážka dle zvláštního předpisu</dt>
           <dd>{{#if obstacle_special_regulation}}Ano{{else}}Ne{{/if}}</dd>
         </dl>
-      </div>
-      <div class="col-12 col-sm-6 col-md-3">
+      </gov-grid-item>
+      <gov-grid-item size-sm="6/12" size-md="3/12">
         <dl>
           <dt>Existuje překážka dle z. 106/1999 Sb.</dt>
           <dd>{{#if obstacle_106}}Ano{{else}}Ne{{/if}}</dd>
         </dl>
-      </div>
-    </div>
+      </gov-grid-item>
+    </gov-grid>
     {{/with}}
-    <br/>
-    {{#with datasets}}
-    {{#if visible}}
-    <h2>Datové sady</h2>
-    <br/>
-    <div>
-      {{#each items}}
-      <div class="dataset">
-        <a href="{{href}}" rel="nofollow noopener noreferrer">
-          <h4>{{title}}</h4>
-        </a>
-        <p>
-          {{description}}
-        </p>
-      </div>
-      {{/each}}
-    </div>
-    {{/if}}
-    {{/with}}
-  </div>
-  
+    <br />
+  </gov-container>
   {{#with footer}} {{> footer }} {{/with}}
 </body>
 
