Remove unused class

--- a/server/http/application-detail/application-detail-cs.html
+++ b/server/http/application-detail/application-detail-cs.html
@@ -7,7 +7,7 @@
   <title>Aplikace - Národní katalog otevřených dat (NKOD)</title>
 </head>
 
-<body class="application-detail">
+<body>
   {{#with navigation}} {{> navigation }} {{/with}}
   <gov-container>
     {{#with application}}
