Update search in lists
Remove unused component, fix clear filters button.

--- a/server/http/application-list/application-list-cs.html
+++ b/server/http/application-list/application-list-cs.html
@@ -23,7 +23,7 @@
           <gov-accordion-item>
             <h3 slot="label">Rozšířené vyhledávání</h3>
             <div>
-              <gov-button slot="button" variant="primary" size="m">
+              <gov-button slot="button" variant="primary" size="m" href="{{clear-href}}">
                 Smaž filtry
               </gov-button>
             </div>
