--- a/server/http/suggestion-list/suggestion-list-cs.html
+++ b/server/http/suggestion-list/suggestion-list-cs.html
@@ -23,7 +23,9 @@
           <gov-accordion-item>
             <h3 slot="label">Rozšířené vyhledávání</h3>
             <div>
-              <gov-button slot="button" variant="primary" size="m">Smaž filtry</gov-button>
+              <gov-button slot="button" variant="primary" size="m" href="{{clear-href}}">
+                Smaž filtry
+              </gov-button>
             </div>
           </gov-accordion-item>
         </gov-accordion>
