Update icon size

--- a/server/http/local-catalog-list/local-catalog-list-cs.html
+++ b/server/http/local-catalog-list/local-catalog-list-cs.html
@@ -43,7 +43,7 @@
                 </a>
               </div>
             </div>
-            <div class="gov-card__footer" style="font-size: large;">
+            <div class="gov-card__footer" style="font-size: x-large;">
               <a href="{{homepage}}"><gov-icon name="house-door-fill"></gov-icon></a>
               <a href="{{endpointURL}}"><gov-icon name="link-45deg"></gov-icon></a>
               <a href="{{deleteUrl}}"><gov-icon name="trash"></gov-icon></a>
