--- a/server/http/dataset-detail/dataset-detail-cs.html
+++ b/server/http/dataset-detail/dataset-detail-cs.html
@@ -174,29 +174,75 @@
         <h4>{{format}}</h4>
         <div style="display: flex; flex-direction: row;">
           {{#if missingLegal}}
-          MISSING
+          <div style="width: 50%;">
+            Podmínky užití distribuce nejsou specifikovány
+          </div>
           {{/if}}
           {{#if dcatApLegal}}
-          DCAT-AP LEGAL
+          <div style="width: 50%;">
+            <a href="{{license}}" rel="nofollow noopener noreferrer" target="_blank">
+              Podmínky užití distribuce
+            </a>
+          </div>
           {{/if}}
           {{#if dcatApCzLegal}}{{#with dcatApCzLegal}}
           <div style="width: 50%;">
             Podmínky užití distribuce
             <ul>
               <li>
-                <div></div>
+                {{#with authorship}}
+                <div>
+                  {{#if href}}
+                    <a href="{{href}}" rel="nofollow noopener noreferrer" target="_blank">{{label}}</a>
+                  {{else}}
+                    {{label}}
+                  {{/if}}
+                  <gov-icon name="{{icon}}" class="{{iconStyle}}" title="{{iconTitle}}" type="bootstrap"></gov-icon>
+                </div>
+                {{/with}}
                 Autorské dílo
               </li>
               <li>
-                <div></div>
-                Originální databáze
+                {{#with databaseAuthorship}}
+                <div>
+                  {{#if href}}
+                    <a href="{{href}}" rel="nofollow noopener noreferrer" target="_blank">{{label}}</a>
+                  {{else}}
+                    {{label}}
+                  {{/if}}
+                  <gov-icon name="{{icon}}" class="{{iconStyle}}" title="{{iconTitle}}" type="bootstrap"></gov-icon>
+                </div>
+                {{/with}}
+                {{#if databaseAuthorship.author}}
+                  {{databaseAuthorship.author}}
+                {{else}}
+                  Originální databáze
+                {{/if}}
               </li>
               <li>
-                <div></div>
-                Zvláštní právo pořizovatele databáze
+                {{#with protectedDatabaseAuthorship}}
+                <div>
+                  {{#if href}}
+                    <a href="{{href}}" rel="nofollow noopener noreferrer" target="_blank">{{label}}</a>
+                  {{else}}
+                    {{label}}
+                  {{/if}}
+                  <gov-icon name="{{icon}}" class="{{iconStyle}}" title="{{iconTitle}}" type="bootstrap"></gov-icon>
+                </div>
+                {{/with}}
+                {{#if protectedDatabaseAuthorship.author}}
+                  {{protectedDatabaseAuthorship.author}}
+                {{else}}
+                  Zvláštní právo pořizovatele databáze
+                {{/if}}
               </li>
               <li>
-                <div></div>
+                {{#with personalData}}
+                <div>
+                  {{label}}
+                  <gov-icon name="{{icon}}" class="{{iconStyle}}" title="{{iconTitle}}" type="bootstrap"></gov-icon>
+                </div>
+                {{/with}}
                 Osobní údaje
               </li>
             </ul>
