Fix dataset conforms to

--- a/server/http/dataset-detail/dataset-detail-cs.html
+++ b/server/http/dataset-detail/dataset-detail-cs.html
@@ -139,7 +139,7 @@
           <dt>Dokumentace</dt>
           {{#each conformsTo}}
           <dd>
-            <a href="{{href}}">Zobrazit specifikaci</a>
+            <a href="{{href}}">{{label}}</a>
           </dd>
           {{/each}}
         </dl>
